Various smaller Trello tasks
Fixed Category-Edit-Bug, button design, show posts when not logged in, rerout from login to register, disable create comment button when not logged in

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
@@ -1,5 +1,5 @@
-<mat-card>
-  <p *ngIf="user?.isAdmin">
+<mat-card *ngIf="user?.isAdmin">
+  <p>
   <a routerLink="/fan-shop/product/-1"><button>Create Product</button></a>
 </p>
 </mat-card>
