--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -9,7 +9,7 @@
         <input matInput placeholder="Post Tags, comma separated" [(ngModel)]="newPostTags" title="tags">
     </mat-form-field> -->
     <p *ngIf="loggedIn">
-        <a routerLink="/home/post/-1"><button>Create Post</button></a>
+        <a routerLink="/home/post/-1"><button mat-flat-button color="primary">Create Post</button></a>
     </p>
     <p *ngIf="!loggedIn">
         <a routerLink="/login">Please log in to create Post</a>
@@ -33,12 +33,12 @@
 <mat-form-field appearance="fill">
   <mat-label>Category:</mat-label>
   <mat-select [(ngModel)]="selectedCategory" (ngModelChange)="selectPosts()">
-    <mat-option value="restaurant">Restaurant</mat-option>
-    <mat-option value="coffeeshop">Coffeeshop</mat-option>
-    <mat-option value="shopping">Shopping</mat-option>
-    <mat-option value="sightseeing">Sightseeing</mat-option>
-    <mat-option value="museum">Museum</mat-option>
-    <mat-option value="university">University</mat-option>
+    <mat-option value="Restaurant">Restaurant</mat-option>
+    <mat-option value="Coffeeshop">Coffeeshop</mat-option>
+    <mat-option value="Shopping">Shopping</mat-option>
+    <mat-option value="Sightseeing">Sightseeing</mat-option>
+    <mat-option value="Museum">Museum</mat-option>
+    <mat-option value="University">University</mat-option>
     <mat-option value="all">Show All</mat-option>
   </mat-select>
 </mat-form-field>
