tried out small changes in layout

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
@@ -1,6 +1,6 @@
 <mat-card *ngIf="user?.isAdmin">
   <p>
-  <a routerLink="/fan-shop/product/-1"><button>Create Product</button></a>
+  <a routerLink="/fan-shop/product/-1"><button mat-flat-button color="primary">Create Product</button></a>
 </p>
 </mat-card>
 
@@ -8,7 +8,7 @@
 <mat-form-field appearance="fill">
   <mat-label>Sort by:</mat-label>
   <mat-select [(ngModel)]="sortBy"(ngModelChange)="sortProducts()">
-    <mat-option value="title">Title</mat-option>
+    <mat-option value="title">Name</mat-option>
     <mat-option value="id">ID</mat-option>
     <mat-option value="tags">Tags</mat-option>
     <mat-option value="price">Price</mat-option>
