show product in order form

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
@@ -1,4 +1,6 @@
 <div *ngIf=!redirecting>
+  <mat-card><app-product [productId]="productId"
+                         [preview]="true"></app-product></mat-card>
   <mat-card>
     <h3>Shipping Details</h3>
     <mat-form-field>
