--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.html
@@ -9,7 +9,7 @@
   <mat-label>Sort by:</mat-label>
   <mat-select [(ngModel)]="sortBy"(ngModelChange)="sortProducts()">
     <mat-option value="title">Name</mat-option>
-    <mat-option value="id">ID</mat-option>
+<!--    <mat-option value="id">ID</mat-option>-->
     <mat-option value="tags">Tags</mat-option>
     <mat-option value="price">Price</mat-option>
   </mat-select>
@@ -18,12 +18,12 @@
 <mat-form-field appearance="fill">
   <mat-label>Category:</mat-label>
   <mat-select [(ngModel)]="selectedCategory" (ngModelChange)="selectProducts()">
-    <mat-option value="restaurant">Restaurant</mat-option>
-    <mat-option value="coffeeshop">Coffeeshop</mat-option>
-    <mat-option value="shopping">Shopping</mat-option>
-    <mat-option value="sightseeing">Sightseeing</mat-option>
-    <mat-option value="museum">Museum</mat-option>
-    <mat-option value="university">University</mat-option>
+    <mat-option value="Restaurant">Restaurant</mat-option>
+    <mat-option value="Coffeeshop">Coffeeshop</mat-option>
+    <mat-option value="Shopping">Shopping</mat-option>
+    <mat-option value="Sightseeing">Sightseeing</mat-option>
+    <mat-option value="Museum">Museum</mat-option>
+    <mat-option value="University">University</mat-option>
     <mat-option value="all">Show All</mat-option>
   </mat-select>
 </mat-form-field>
