--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -43,7 +43,7 @@
 
         <mat-label>Price</mat-label>
         <input matInput #message maxlength="256" [(ngModel)]="product.price" [ngModelOptions]="{standalone: true}">
-        <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
+        <mat-hint align="end"></mat-hint>
         </mat-form-field>
         <mat-form-field appearance="fill">
 
@@ -66,9 +66,9 @@
       <br><br>
       <angular-editor id="editor1" [(ngModel)]="product.description" [config]="config1" (ngModelChange)="onChange($event)"
                       (blur)="onBlur($event)"></angular-editor>
-      <p class="html">
-        HTML Output:  {{ product.description }}
-      </p>
+<!--      <p class="html">-->
+<!--        HTML Output:  {{ product.description }}-->
+<!--      </p>-->
 
       <button *ngIf="existsInBackend" (click)="save()">Save</button>
       <button *ngIf="!existsInBackend" (click)="createProduct()">Create</button>
