--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -19,14 +19,14 @@
 <mat-form-field appearance="fill">
   <mat-label>Sort by:</mat-label>
   <mat-select [(ngModel)]="sortBy"(ngModelChange)="sortPosts()">
-    <mat-option value="title">Title</mat-option>
-    <mat-option value="id">ID</mat-option>
+<!--    <mat-option value="title">Title</mat-option>-->
+<!--    <mat-option value="id">ID</mat-option>-->
     <mat-option value="recent">Newest</mat-option>
     <mat-option value="oldest">Oldest</mat-option>
     <mat-option value="upvotes">Upvotes</mat-option>
     <mat-option value="downvotes">Downvotes</mat-option>
-    <mat-option value="tags">Tags</mat-option>
-    <mat-option value="total">Total Votes</mat-option>
+<!--    <mat-option value="tags">Tags</mat-option>-->
+    <mat-option value="total">Score</mat-option>
   </mat-select>
 </mat-form-field>
 
