--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,7 +1,7 @@
 <h1>Welcome, {{user?.username}}!</h1>
 <mat-tab-group>
   <mat-tab label="Flagged Posts"><app-post-feed [feedType]="'flagged'"></app-post-feed></mat-tab>
-  <mat-tab label="Orders"></mat-tab>
+  <mat-tab label="Orders"><app-order-feed [feedType]="'admin'"></app-order-feed></mat-tab>
   <mat-tab label="Users"></mat-tab>
   <mat-tab label="Commented"></mat-tab>
 </mat-tab-group>
