--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
@@ -48,20 +48,6 @@
     <mat-tab label="Upvoted"><app-post-feed [feedType]="'upvoted'"></app-post-feed></mat-tab>
     <mat-tab label="Downvoted"><app-post-feed [feedType]="'downvoted'"></app-post-feed></mat-tab>
     <mat-tab label="Commented"><app-post-feed [feedType]="'commented'"></app-post-feed></mat-tab>
-    <mat-tab label="Orders">
-      <mat-form-field appearance="fill">
-        <mat-label>Status:</mat-label>
-        <mat-select [(ngModel)]="selectedStatus" (ngModelChange)="filterBy(selectedStatus)">
-          <mat-option value="Pending">Pending</mat-option>
-          <mat-option value="Shipped">Shipped</mat-option>
-          <mat-option value="Cancelled">Cancelled</mat-option>
-          <mat-option value="all">Show All</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <div *ngFor="let order of selectedOrders">
-        <app-order [order]="order"
-                   (update)="updateOrder($event)"></app-order>
-      </div>
-    </mat-tab>
+    <mat-tab label="Orders"><app-order-feed [feedType]="'user'"></app-order-feed></mat-tab>
   </mat-tab-group>
 </mat-card>
