--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/admin-dashboard.component.html
@@ -2,6 +2,5 @@
 <mat-tab-group>
   <mat-tab label="Flagged Posts"><app-post-feed [feedType]="'flagged'"></app-post-feed></mat-tab>
   <mat-tab label="Orders"><app-order-feed [feedType]="'admin'"></app-order-feed></mat-tab>
-  <mat-tab label="Users"></mat-tab>
-  <mat-tab label="Commented"></mat-tab>
+  <mat-tab label="Users"><app-user-list></app-user-list></mat-tab>
 </mat-tab-group>
