can now only create post when description or image is set

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -59,6 +59,7 @@
 
     </mat-form-field><span id="setTitle" style="visibility: hidden">Please set a title. </span>
       <span id="setCategory" style="visibility: hidden"> Please set a category.</span>
+      <span id="setDescriptionOrImage" style="visibility: hidden"> Please set a Description or Image.</span>
     </form>
 
     <!-- DESCRIPTION -->
