Added confirm message for cancelling orders
Installation in frontend:
npm install ngx-toastr
npm install @angular/animations
npm i @costlydeveloper/ngx-awesome-popup

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
@@ -12,7 +12,7 @@
       </mat-card>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-flat-button color="warn" (click)="cancelOrder()"[disabled]="isShipped || isCancelled">CANCEL</button>
+      <button mat-flat-button color="warn" (click)="confirmCancelling()"[disabled]="isShipped || isCancelled">CANCEL</button>
       <button *ngIf="user?.isAdmin" mat-flat-button color="primary" (click)="shipOrder()"[disabled]="isShipped || isCancelled">SHIP</button>
     </mat-card-actions>
     <mat-card-footer *ngIf="user?.isAdmin">
