pressing enter while logging in sends login request

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.html
@@ -1,17 +1,16 @@
 <mat-card>
   <h3>Login</h3>
 
-  <div *ngIf="!loggedIn">
+  <div *ngIf="!loggedIn" >
     <mat-form-field>
-      <input matInput type="text" placeholder="Username or E-mail" name="name" [(ngModel)]="userToLogin.username">
+      <input matInput type="text" placeholder="Username or E-mail" name="name" [(ngModel)]="userToLogin.username" id="usernameInput">
     </mat-form-field>
     <mat-form-field>
-      <input matInput type="password" placeholder="Password" name="password" [(ngModel)]="userToLogin.password">
+      <input matInput type="password" placeholder="Password" name="password" [(ngModel)]="userToLogin.password" id="passwordInput">
     </mat-form-field>
     <p style="color:red" *ngIf="passwordWrong"> Password wrong</p>
     <p style="color:red" *ngIf="userNameWrong"> Username not found</p>
-
-    <button mat-flat-button color="primary" (click)="loginUser()">Login</button>
+    <button mat-flat-button color="primary" (click)="loginUser()" id="loginButton" >Login</button>
   </div>
 
   <div *ngIf="loggedIn">
