--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.html
@@ -10,7 +10,7 @@
     </mat-form-field>
     <p style="color:red" *ngIf="passwordWrong"> Password wrong</p>
     <p style="color:red" *ngIf="userNameWrong"> Username not found</p>
-    <button mat-flat-button color="primary" (click)="loginUser()">Login</button>
+    <button mat-flat-button color="primary" (click)="loginUser()" id="loginButton">Login</button>
     <br>
     <span id="emptyUser" style="visibility: hidden">Please enter your username or email</span>
     <span id="emptyPassword" style="visibility: hidden">Please enter your password</span>
