--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/comment/comment.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/comment/comment.component.html
@@ -1,6 +1,6 @@
 <mat-card>
 <div>
   {{comment.description}}<br><br>
-  <button mat-flat-button color="warn" (click)="deleteComment()" *ngIf="user?.userId === comment.userId || user?.isAdmin">Delete Comment</button>
+  <button mat-flat-button color="warn" (click)="confirmDeleteComment()" *ngIf="user?.userId === comment.userId || user?.isAdmin">Delete Comment</button>
 </div>
 </mat-card>
