--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -4,7 +4,7 @@
       <div mat-card-avatar></div>
       <mat-card-title>{{post.title}}</mat-card-title>
       <mat-card-subtitle>{{post.tags}}</mat-card-subtitle>
-      <mat-card-subtitle>Created At: {{createdAtString}} by {{authorName}}</mat-card-subtitle>
+      <mat-card-subtitle>{{post.createdAt.toDateString()}} by {{authorName}}</mat-card-subtitle>
     </mat-card-header>
     <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo in Post"> -->
     <mat-card-content>
