Confirm message for revoking admin rights

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/user-list/user-list.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let user of userList">
   <mat-card *ngIf="user.isAdmin">
     <p><b>Admin</b> {{user.username}}</p>
-    <button mat-flat-button color="warn" (click)="removeAdmin(user)">revoke admin rights</button>
+    <button mat-flat-button color="warn" (click)="confirmRemoveAdmin(user)">revoke admin rights</button>
   </mat-card>
   <mat-card *ngIf="!user.isAdmin">
     <p><b>User</b> {{user.username}}</p>
