--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -13,6 +13,7 @@
   <mat-select [(ngModel)]="sortBy"(ngModelChange)="sortPosts()">
 <!--    <mat-option value="title">Title</mat-option>-->
 <!--    <mat-option value="id">ID</mat-option>-->
+    <mat-option value="flags" *ngIf="feedType == 'flagged'">Flags</mat-option>
     <mat-option value="recent">Newest</mat-option>
     <mat-option value="oldest">Oldest</mat-option>
     <mat-option value="upvotes">Upvotes</mat-option>
