--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
@@ -2,6 +2,12 @@
   <mat-card><app-product [productId]="productId"
                          [preview]="true"></app-product></mat-card>
   <mat-card>
+    <h3>Payment Options</h3>
+    <mat-radio-group [(ngModel)]="paymentType">
+      <mat-radio-button class="example-margin" value="invoice">Invoice</mat-radio-button>
+      <mat-radio-button class="example-margin" value="stripe">Stripe</mat-radio-button>
+    </mat-radio-group>
+
     <h3>Shipping Details</h3>
     <mat-form-field>
       <input matInput type="text" placeholder="first name" name="first name" [(ngModel)]="orderFirstName">
