--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.html
@@ -11,12 +11,12 @@
       </mat-form-field>
       <p style="color:red" *ngIf="passwordWrong"> Password wrong</p>
       <p style="color:red" *ngIf="userNameWrong"> Username not found</p>
-      <button type="submit" mat-flat-button color="primary" (click)="loginUser()" >Login</button>
+      <button type="submit" mat-flat-button color="primary" >Login</button>
       <br>
       <span id="emptyUser" style="visibility: hidden">Please enter your username or email</span>
       <span id="emptyPassword" style="visibility: hidden">Please enter your password</span>
     </form>
-    
+
 
 
 
