Confirm promote to admin

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/user-list/user-list.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/user-list/user-list.component.html
@@ -5,6 +5,6 @@
   </mat-card>
   <mat-card *ngIf="!user.isAdmin">
     <p><b>User</b> {{user.username}}</p>
-    <button mat-flat-button color="primary" (click) = "promoteAdmin(user)">promote to admin</button>
+    <button mat-flat-button color="primary" (click) = "confirmPromoteAdmin(user)">promote to admin</button>
   </mat-card>
 </div>
