--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.css
@@ -1,3 +1,43 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 25px;
+  border: none;
+  min-width: 90px;
+  text-align: center;
+
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  min-width: 100px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-size: small;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
