--- a/ese2021-project-scaffolding/scaffolding/frontend/src/styles.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/styles.css
@@ -17,4 +17,7 @@ button, input {
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
