--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.css
@@ -2,6 +2,7 @@
   flex: 1 1 auto;
 }
 
+/* DROPDOWN FOR PROFILE */
 .dropbtn {
   background-color: #04AA6D;
   color: white;
@@ -12,13 +13,11 @@
   text-align: center;
 
 }
-
 .dropdown {
   position: relative;
   display: inline-block;
   min-width: 100px;
 }
-
 .dropdown-content {
   display: none;
   position: absolute;
@@ -27,7 +26,6 @@
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
@@ -35,9 +33,6 @@
   display: block;
   font-size: small;
 }
-
 .dropdown-content a:hover {background-color: #ddd;}
-
 .dropdown:hover .dropdown-content {display: block;}
-
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
