--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/app.component.html
@@ -14,16 +14,16 @@
         <mat-icon class="dropbtn">face</mat-icon>
         <div class="dropdown-content">
           <a routerLink="/profile">Profile</a>
-          <a routerLink="" (click)="logoutUser()">Logout</a>
           <a routerLink="/dashboard" *ngIf="loggedIn && user?.isAdmin">Dashboard</a>
+          <a routerLink="" (click)="logoutUser()">Logout</a>
         </div>
       </div>
     </span>
   </mat-toolbar-row>
 </mat-toolbar>
-<div class="main-content">
+
+
+<div>
   <router-outlet></router-outlet>
-
-
 </div>
 
