--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order/order.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-subtitle>{{order.status}}</mat-card-subtitle>
+    <mat-card-title>{{order.status}}</mat-card-title>
+    <mat-card-subtitle>{{order.billingStatus}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
       <mat-card><app-product [productId]="order.productId"
@@ -14,7 +15,7 @@
     <mat-card-actions>
       <button mat-flat-button color="warn" (click)="confirmCancelling()"[disabled]="isShipped || isCancelled">CANCEL</button>
       <button *ngIf="user?.isAdmin" mat-flat-button color="primary" (click)="confirmShipping()"[disabled]="isShipped || isCancelled">SHIP</button>
-      <button mat-flat-button color="warn" (click)="confirmPayment()"[disabled]="isPaid || isCancelled">SET PAID</button>
+      <button *ngIf="user?.isAdmin" mat-flat-button color="warn" (click)="confirmPayment()"[disabled]="isPaid || isCancelled">SET PAID</button>
     </mat-card-actions>
     <mat-card-footer *ngIf="user?.isAdmin">
       Ordered by: {{order.userId}} | Shipped by: {{order.adminId}} <br><br>
