--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/login/login.component.css
@@ -26,12 +26,25 @@
     /* border: solid 1px red; */
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+
 
 }
 
+
+
 .mat-form-field {
     width: 75%;
+    margin-right: -1.25em;
+    /* margin-top: 1em; */
+}
+
+.register {
+    display: flex;
+}
+
+p {
+    text-align: center;
 }
 
 
